css mobile overflow issue fix

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     overflow: auto;
-    outline: solid 1px red;
+    /* outline: solid 1px red; */
 }
 
 body {
